# dwg-entity-extractor

./: README.md  pyproject.toml
src/dwg_extractor/: __init__.py
